[package]
name = "format-buf"
version = "1.0.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

description = "Drop-in replacement for format! macro, which can write to existing buffer"
readme = "README.md"

repository = "https://github.com/matklad/format-buf"
categories = [ "rust-patterns" ]

exclude = [ "/.travis.yml", "/rustfmt.toml" ]
